Accept directly encoded Unicode characters sent instead of keysyms by some keymaps (e.g. Arabic). Bug 188538, r=jag, sr=blizzard.